 [fab]	0.24.4cvs14

	* AUTHORS
	Update maintainer

2009-03-03 [colin]	0.24.4cvs13

	* src/maildir.c
	* src/maildir_gtk.c
		Fix bug 1860, 'Permissions' (wrong permissions
		when creating subfolders)
		Fix bug 1861, 'Subfolders in INBOX'
		Fix bug 1862, 'Create new mailbox with non-existant 
		parent directory'
		All patches by Fabian <fk at dev.anterias.net>

2009-02-23 [colin]	0.24.4cvs12

	* src/maildir_gtk.c
		Fix bug 1856, 'Load, unload, load produces Gtk-WARNING'
		Fix menu removal; patch by Fabian <fk at dev.anterias.net>

2008-08-17 [colin]	0.24.4cvs11

	* src/maildir.c
	* src/maildir_gtk.c
		Warning fix

2008-08-07 [colin]	0.24.4cvs10

	* src/maildir.c
	* src/maildir_gtk.c
		Undeprecate

2008-08-05 [colin]	0.24.4cvs9

	* src/maildir_gtk.c
	* src/plugin.c
		Undeprecate GtkCTree

2008-07-31 [colin]	0.24.4cvs8

	* src/maildir_gtk.c
		Fix warning

2008-07-30 [colin]	0.24.4cvs7

	* src/maildir_gtk.c
	* src/plugin.c
		Move the folderview popup menu to GtkUIManager

2008-07-29 [colin]	0.24.4cvs6

	* src/maildir.c
	* src/maildir_gtk.c
		Switch the main menu to GtkUIManager

2008-02-12 [wwp]	0.24.4cvs5

	* configure.ac
	* src/maildir_gtk.c
		Updated to match folder_sel API changes.

2007-08-27 [colin]	0.24.4cvs4

	* src/maildir_gtk.c
		Fix loss of subfolders properties when renaming folder

2007-07-11 [colin]	0.24.4cvs3

	* src/plugin.c
		Specify license better (GPL2+)

2007-06-21 [colin]	0.24.4cvs2

	* src/plugin.c
		Update plugin API

2007-05-05 [wwp]	0.24.4cvs1

	* src/maildir.c
		Fix "faild" typos everywhere and capitalization of
		some g_warnings.

2007-01-09 [paul]	0.24.4

	0.24.4 released

2006-12-27 [paul]	0.24.3cvs3

	* src/maildir_gtk.c
		Add Copy folder in the folder's contextual
		menu

2006-12-26 [colin]	0.24.3cvs2

	* src/maildir_gtk.c
	* src/plugin.c
		Follow 2.6.1cvs75 API change

2006-12-15 [ticho]	0.24.3cvs1

	* configure.ac
	* src/plugin.c
		Use check_plugin_version() for version check.

2006-12-04 [paul]	0.24.3

	0.24.3 released
