@@ -8,7 +8,7 @@ dnl plugin version
 MAJOR_VERSION=0
 MINOR_VERSION=24
 MICRO_VERSION=4
-EXTRA_VERSION=14
+EXTRA_VERSION=15
 
 CFLAGS="$CFLAGS -Wall"
 if test $USE_MAINTAINER_MODE = yes; then
